--- a/docker/services/frontend/html/workplace.html
+++ b/docker/services/frontend/html/workplace.html
@@ -1377,6 +1377,7 @@
                     <button class="btn btn-sm" onclick="triggerScan()">Scan</button>
                     <button class="btn btn-sm" onclick="toggleScanner()" id="toggleBtn">Stop</button>
                     <a href="workplace-mt5.html" class="btn btn-sm btn-secondary">MT5 Trades</a>
+                    <a href="config-strategies.html" class="btn btn-sm btn-secondary">Strategien</a>
                     <a href="config-workplace.html" class="btn btn-sm">Config</a>
                 </div>
             </div>
