--- a/docker/services/frontend/html/config-workplace.html
+++ b/docker/services/frontend/html/config-workplace.html
@@ -690,6 +690,21 @@
                             </select>
                         </div>
                     </div>
+
+                    <h3 style="margin-top: 1rem;">Konto <span style="font-weight: normal; opacity: 0.6; font-size: 0.75rem;">(Optional)</span></h3>
+                    <div class="form-row-2">
+                        <div class="form-group" style="margin-bottom: 0;">
+                            <label>Benutzername</label>
+                            <input type="text" id="tvUsername" placeholder="TradingView Username" />
+                        </div>
+                        <div class="form-group" style="margin-bottom: 0;">
+                            <label>Session ID</label>
+                            <input type="password" id="tvSessionId" placeholder="Browser Cookie" />
+                        </div>
+                    </div>
+                    <p class="info-text" style="margin-top: 0.5rem; color: #fbbf24;">
+                        Session ID: Browser-Cookies → tradingview.com → "sessionid"
+                    </p>
                 </div>
             </div>
 
@@ -778,31 +793,6 @@
                             <span class="default-hint">Standard: 10</span>
                         </div>
                     </div>
-                </div>
-
-                <!-- TRADINGVIEW ACCOUNT (optional) -->
-                <div class="card">
-                    <div class="section-header">
-                        <svg class="section-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/>
-                        </svg>
-                        <h2>TradingView Konto</h2>
-                        <span style="font-size: 0.75rem; opacity: 0.6; margin-left: auto;">Optional</span>
-                    </div>
-
-                    <div class="form-row-2">
-                        <div class="form-group" style="margin-bottom: 0;">
-                            <label>Benutzername</label>
-                            <input type="text" id="tvUsername" placeholder="TradingView Username" />
-                        </div>
-                        <div class="form-group" style="margin-bottom: 0;">
-                            <label>Session ID</label>
-                            <input type="password" id="tvSessionId" placeholder="Browser Cookie" />
-                        </div>
-                    </div>
-                    <p class="info-text" style="margin-top: 0.5rem; color: #fbbf24;">
-                        Session ID: Browser-Cookies → tradingview.com → "sessionid"
-                    </p>
                 </div>
 
                 <!-- ACTIONS -->
